# qaria

./: CMakeLists.txt  README  README.md
src/: dialognewdownload.cpp  dialognewdownload.h  dialognewdownload.ui  main.cpp  progressdelegate.cpp  progressdelegate.h  qaria.cpp  qaria.h  qaria.ui
